<resources>
    <string name="app_name">Semaje</string>
    <string name="chatting_logo">chatting logo</string>
    <string name="welcome_to_semaje">Welcome to Semaje</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_to_semaje">Log In to Semaje</string>
    <string name="enter_name">Enter Name</string>
    <string name="please_input_your_password">Please Input your password</string>
    <string name="welcome_back_to_your_account">Welcome Back to your account</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="please_create_your_password_here">Please Create your password here</string>
    <string name="enter_your_mail">Enter Your mail</string>
    <string name="please_confirm_your_password_here">Please confirm your password here</string>
    <string name="please_create_your_password_her">Please Create your password here</string>
    <string name="you_are_logged_in_as">You are Logged In as</string>
    <string name="log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="henry">Henry</string>
    <string name="sign_in">Sign In</string>
    <string name="signin">Sign In</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="enter_message">Enter message</string>
</resources>