<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/log_in_to_semaje"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEnterLoggedInEmail"
        android:layout_width="387dp"
        android:layout_height="67dp"
        android:layout_marginTop="88dp"
        android:paddingStart="5dp"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="7dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterloggedInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter email"
            android:inputType="text"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEnterLoginPassword"
        android:layout_width="388dp"
        android:layout_height="71dp"
        android:layout_marginTop="56dp"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="7dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEnterLoggedInEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_your_password"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_back_to_your_account"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogIn" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="351dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEnterLoginPassword" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:text="@string/signup"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>