<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEnterSignUpName"
        android:layout_width="383dp"
        android:layout_height="72dp"
        android:layout_marginTop="52dp"
        android:paddingStart="5dp"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="7dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEnterEmail"
        android:layout_width="378dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:paddingStart="5dp"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="7dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEnterSignUpName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mail"
            android:inputType="text"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEnterSignUpPassword"
        android:layout_width="379dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="7dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEnterEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterPassword"
            android:layout_width="366dp"
            android:layout_height="49dp"
            android:hint="@string/please_create_your_password_her"
            android:inputType="textPassword"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="378dp"
        android:layout_height="64dp"
        android:layout_marginTop="192dp"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="7dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEnterSignUpName"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="364dp"
            android:layout_height="57dp"
            android:hint="@string/please_confirm_your_password_here"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_semaje"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="351dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/already_have_an_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/log_in"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.169" />

</androidx.constraintlayout.widget.ConstraintLayout>