<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="376dp"
        android:layout_height="304dp"
        android:layout_marginTop="16dp"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chatting" />

    <LinearLayout
        android:id="@+id/boxLayout"
        android:layout_width="320dp"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/primary"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcome"
        app:layout_constraintVertical_bias="0.55">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_semaje"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="297dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:drawableRight="@drawable/baseline_navigate_next_24"
            android:text="@string/log_in"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:cornerRadius="5dp" />


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="293dp"
            android:layout_height="60dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:drawableRight="@drawable/baseline_navigate_next_24"
            android:text="@string/sign_up"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:cornerRadius="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>