<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="2"
            android:layout_marginBottom="10dp"
            android:text="@string/profile"
            android:textSize="15sp"
            android:padding="5dp"
            android:textStyle="bold"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="42dp"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher" />


    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:apps="https://schemes.android.com/apk/res-auto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/userImage"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                app:civ_border_color="@color/primary"
                android:src="@mipmap/ic_launcher"
                />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:inputType="text|textAutoComplete"
                android:maxLines="1"
                android:text="@string/henry"
                android:textAlignment="center"
                android:textSize="25sp" />
            <Button
                android:id="@+id/btnSave"
                android:layout_width="351dp"
                android:layout_height="56dp"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/primary"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/save"
                android:textSize="20sp"
                app:cornerRadius="5dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:indeterminate="@color/primary"/>



        </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>